# editorconfig-geany

./: .clang-format  .editorconfig  CMakeLists.txt  editorconfig-geany.c
